sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value lgr
    while (i+ecart < lgr) {
                     ^AlgCombSort:17: error: not found: value haveBeenSorted
  } while ((ecart > 1) || !haveBeenSorted);
                           ^